Fix integration list. Add ns name to gw profile list api.
